# src/app/services/models/ticket.ts
@@ -4,7 +4,7 @@ import { User } from '../models/user';
 export interface Ticket {
   description?: string;
   id?: number;
-  status?: string;
+  status?: 'ONHOLD' | 'OPEN' | 'CLOSED';
   subject?: string;
   user?: User;
 }
